--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # This is the default format. 
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
+baseurl: knowledge-wiki
 markdown: kramdown
 permalink: /blog/:title 
 
@@ -27,7 +28,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://wjxing.github.com
+production_url : http://wjxing.github.com/knowledge-wiki
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
