--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # This is the default format. 
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
-baseurl: knowledge-wiki
 markdown: kramdown
-permalink: /blog/:title 
+permalink: /blog/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
@@ -28,7 +27,8 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://wjxing.github.com/knowledge-wiki
+production_url : http://wjxing.github.io
+BASE_PATH : /knowledge-wiki
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
